Fixed overlapping css classes and changed some visuals

--- a/src/components/ChngPass.css
+++ b/src/components/ChngPass.css
@@ -26,7 +26,7 @@
     width: 30vw;
   }
 
-  .box {
+  .RPbox {
     position: relative;
     width: 100%;
     height: 100%;
@@ -47,7 +47,7 @@
     margin-bottom: 0.75em;
   }
 
-  .box p {
+  .RPbox p {
     margin-bottom: 2em;
   }
 
