--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -13,6 +13,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 50;
     border: 3px double rgb(239, 241, 252);
+    color: white;
 }
 
 .profile-container {
@@ -40,6 +41,7 @@
     transition: opacity 0.3s ease, visibility 0.3s ease; /* Smooth fade-in and fade-out */
     opacity: 0;
     visibility: hidden; /* Hide the text during fade-out */
+    margin-top: 8px;
 }
 
 .title_mode.fade-in {
@@ -91,6 +93,7 @@
 }
 
 .nutrition-table {
+    color: white;
     width: 100%;
     border-collapse: collapse; /* Ensures borders are shared between cells */
 }
@@ -128,6 +131,7 @@
 .nutrition-table-wrapper,
 .plus-button-wrapper,
 .nutrition-section-wrapper {
+    color: white;
     transition: opacity 0.3s ease, visibility 0.3s ease; /* Smooth fade-in and fade-out */
 }
 
@@ -319,6 +323,7 @@ input:not(:checked) + .toggle-button .emoji {
 }
 
 .profile-name {
+    color: white;
     font-weight: 100;
 }
 
@@ -381,6 +386,7 @@ input:not(:checked) + .toggle-button .emoji {
     width: 45%;
     transform: translateY(100%);
     animation: slideUpFadeIn 0.8s forwards;
+    color: white;
 }
 
 .add-title {
@@ -466,6 +472,7 @@ input:not(:checked) + .toggle-button .emoji {
     flex-direction: column;
     z-index: 1; 
     text-align: center;
+    color: white;
 }
 
 .Nutrition_box hr {
